# cyberiacafe

./: .gitignore  Cargo.toml  Pipfile  README.md  app.py  onions.db
src/: main.rs
src/handlers/: index.rs
src/models/: mod.rs  onion.rs
src/services/: db.rs  mod.rs  proxy.rs
templates/: index.html  layout.html
