[package]
name = "onions_watch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix-web for web server
actix-web = "4.0"
# Actix-files for serving static files
actix-files = "0.6"
# Tera for template rendering
tera = "1.18.0"
# Rusqlite for SQLite database interactions
rusqlite = "0.29.0"
# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
# Chrono for time formatting
chrono = "0.4"
# Reqwest for HTTP requests (with SOCKS proxy support)
reqwest = { version = "0.11", features = ["rustls-tls", "socks"] }
# Tokio for async runtime
tokio = { version = "1", features = ["full"] }